--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5489,14 +5489,45 @@ a .icon-flip-vertical:before {
 
 .demo-banner {
   padding: 0.5em 1em;
-  background: #e3e4e5;
+  background: #43484e;
+  color: #ffffff;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
 }
 
 .demo-banner_back-link {
+  padding: 0.25em 0;
   margin-right: 1em;
+}
+
+.demo-banner_back-link:link,
+.demo-banner_back-link:visited {
+  color: #7fb8e6;
+}
+
+.demo-banner_back-link:hover,
+.demo-banner_back-link:focus {
+  color: #328ed8;
+}
+
+.demo-banner_back-link:active {
+  color: #babbbd;
+}
+
+.demo-banner_back-link {
+  padding: 0;
+  float: left;
+}
+
+.demo-banner b {
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.lt-ie9 .demo-banner b {
+  font-weight: normal !important;
 }
 
 .demo-placeholder {
@@ -6028,12 +6059,18 @@ img {
   eof: true
 */
 
-.content,
-.sidebar {
+.content_main,
+.content_sidebar {
   padding: 2em 0;
 }
 
-.content-wrapper__1-3 .content {
+.header .demo-placeholder,
+.content_hero .demo-placeholder,
+.footer .demo-placeholder {
+  margin-left: 15px;
+}
+
+.content__1-3 .content_main {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -6047,17 +6084,17 @@ img {
   left: 25%;
 }
 
-.ie .content-wrapper__1-3 .content {
+.ie .content__1-3 .content_main {
   margin-right: -0.26em;
 }
 
-.lt-ie8 .content-wrapper__1-3 .content {
+.lt-ie8 .content__1-3 .content_main {
   display: inline;
   *zoom: 1;
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
-.content-wrapper__1-3 .sidebar {
+.content__1-3 .content_sidebar {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -6071,17 +6108,17 @@ img {
   right: 75%;
 }
 
-.ie .content-wrapper__1-3 .sidebar {
+.ie .content__1-3 .content_sidebar {
   margin-right: -0.26em;
 }
 
-.lt-ie8 .content-wrapper__1-3 .sidebar {
+.lt-ie8 .content__1-3 .content_sidebar {
   display: inline;
   *zoom: 1;
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
-.content-wrapper__2-1 .content {
+.content__2-1 .content_main {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -6093,17 +6130,17 @@ img {
   width: 66.66666666666666%;
 }
 
-.ie .content-wrapper__2-1 .content {
+.ie .content__2-1 .content_main {
   margin-right: -0.26em;
 }
 
-.lt-ie8 .content-wrapper__2-1 .content {
+.lt-ie8 .content__2-1 .content_main {
   display: inline;
   *zoom: 1;
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
-.content-wrapper__2-1 .sidebar {
+.content__2-1 .content_sidebar {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -6115,43 +6152,38 @@ img {
   width: 33.33333333333333%;
 }
 
-.ie .content-wrapper__2-1 .sidebar {
+.ie .content__2-1 .content_sidebar {
   margin-right: -0.26em;
 }
 
-.lt-ie8 .content-wrapper__2-1 .sidebar {
+.lt-ie8 .content__2-1 .content_sidebar {
   display: inline;
   *zoom: 1;
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
-.bleedbar .sidebar {
+.content__bleedbar .content_sidebar {
   padding: 2em 15px;
   margin: 0 -15px;
   background: #f1f2f2;
 }
 
-.bleedbar {
+.content__bleedbar {
   overflow: hidden;
 }
 
-.bleedbar .sidebar {
-  padding: 2em 30px;
-  margin-left: 0;
-}
-
-.bleedbar .sidebar {
+.content__bleedbar .content_sidebar {
   padding: 2em 0 2em 30px;
   margin-left: 0;
   background: transparent;
 }
 
-.lt-ie8 .bleedbar .sidebar {
+.lt-ie8 .content__bleedbar .content_sidebar {
   padding-right: 30px;
   background: #f1f2f2;
 }
 
-.bleedbar .content-wrapper:after {
+.content__bleedbar .content_wrapper:after {
   content: '';
   display: block;
   width: 9999px;
@@ -6164,11 +6196,11 @@ img {
   background: #f1f2f2;
 }
 
-.bleedbar .content-wrapper__2-1:after {
+.content__bleedbar.content__2-1 .content_wrapper:after {
   left: 66.666666667%;
 }
 
-.bleedbar .content-wrapper__3-1:after {
+.content__bleedbar.content__3-1 .content_wrapper:after {
   left: 75%;
 }
 
@@ -6192,16 +6224,12 @@ img {
   border-bottom: 10px solid #2cb34a;
 }
 
-.header .demo-placeholder {
-  margin-left: 15px;
-}
-
-.hero {
-  padding: 1em 2em;
+.content_hero {
+  padding: 1em 0;
   background: #e3e4e5;
 }
 
-.hero > h1 {
+.content_hero > h1 {
   margin: 0;
 }
 
@@ -6209,8 +6237,4 @@ img {
   padding: 1.5em 0;
   border-top: 3px solid #2cb34a;
   background: #f1f2f2;
-}
-
-.footer .demo-placeholder {
-  margin-left: 15px;
 }
