--- a/static/css/main.less
+++ b/static/css/main.less
@@ -42,39 +42,49 @@ img {
 @import (less) "content-blocks.less";
 
 
-.content,
-.sidebar {
+.content_main,
+.content_sidebar {
     padding: 2em 0;
 }
 
 @media @respond-to-medium-screens-min {
 
-    .content-wrapper {
+    .header .demo-placeholder,
+    .content_hero .demo-placeholder,
+    .footer .demo-placeholder {
+        // Temporary styling to bring in line with main columns.
+        margin-left: (@gutter-width / 2);
+    }
+
+    // Set up standard content area layouts
+    .content {
         &__1-3 {
-            .content {
+            .content_main {
                 .column(9);
                 .push(3);
             }
-            .sidebar {
+            .content_sidebar {
                 .column(3);
                 .pull(9);
             }
         }
         &__2-1 {
-            .content {
+            .content_main {
                 .column(8);
             }
-            .sidebar {
+            .content_sidebar {
                 .column(4);
             }
         }
     }
 
-} // end @media for basic content-wrapper layouts
+} // end @media for standard content area layouts
 
-.bleedbar {
 
-    .sidebar {
+
+.content__bleedbar {
+
+    .content_sidebar {
         padding: 2em (@gutter-width / 2);
         margin: 0 -(@gutter-width / 2);
         background: @gray-10;
@@ -85,12 +95,7 @@ img {
         // Prevent pseudoelement background from creating horizontal scrollbar.
         overflow: hidden;
 
-        .sidebar {
-            padding: 2em @gutter-width;
-            margin-left: 0;
-        }
-
-        .sidebar {
+        .content_sidebar {
             padding: 2em 0 2em @gutter-width;
             margin-left: 0;
 
@@ -105,7 +110,7 @@ img {
             }
         }
 
-        .content-wrapper:after {
+        .content_wrapper:after {
             // Create faux sidebar background.
             content: '';
             display: block;
@@ -121,10 +126,10 @@ img {
             background: @gray-10;
         }
 
-        .content-wrapper__2-1:after {
+        &.content__2-1 .content_wrapper:after {
             left: 66.666666667%;    
         }
-        .content-wrapper__3-1:after {
+        &.content__3-1 .content_wrapper:after {
             left: 75%;
         }
 
@@ -136,18 +141,18 @@ img {
 
 .wrapper {
     .wrapper();
+
+    // Set outside margins higher at some breakpoint between smartphone and tablet sizes.
+    // TO DO: Revisit 
+    @media only all and (min-width: 600px) and (max-width: 800px) {
+        padding: 0 @gutter-width;
+    }
 }
 .header {
     border-bottom: 10px solid @green;
-
-    .demo-placeholder {
-        // Temporary style to bring into alignment.
-        // Will be unnecessary if we set up a proper grid in the header.
-        margin-left: (@gutter-width / 2);
-    }
 }
-.hero {
-    padding: 1em 2em;
+.content_hero {
+    padding: 1em 0;
     background: @gray-20;
 
     > h1 {
@@ -159,11 +164,5 @@ img {
     padding: 1.5em 0;
     border-top: 3px solid @green;
     background: @gray-10;
-
-    .demo-placeholder {
-        // Temporary style to bring into alignment.
-        // Will be unnecessary if we set up a proper grid in the header.
-        margin-left: (@gutter-width / 2);
-    }
 }
 
