--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -5,6 +5,123 @@
 
 
 /* topdoc
+  name: Unstyled list
+  family: cfgov-misc
+  patterns:
+    - name: Default unstyled list
+      markup: |
+        <ul class="unstyled-list">
+            <li>
+                List item 1
+            </li>
+            <li>
+                List item 2
+            </li>
+            <li>
+                List item 3
+            </li>
+            <li>
+                List item 4
+            </li>
+        </ul>
+  tags:
+    - cfgov-misc
+*/
+
+.unstyled-list {
+    padding-left: 0;
+    list-style-type: none;
+}
+
+
+/* topdoc
+  name: Horizontal list
+  family: cfgov-misc
+  patterns:
+    - name: Default horizontal list
+      markup: |
+        <ul class="horizontal-list">
+            <li class="horizontal-list_item">
+                <i class="cf-icon cf-icon-email-social-square"></i>
+            </li>
+            <li class="horizontal-list_item">
+                <i class="cf-icon cf-icon-facebook-square"></i>
+            </li>
+            <li class="horizontal-list_item">
+                <i class="cf-icon cf-icon-twitter-square"></i>
+            </li>
+            <li class="horizontal-list_item">
+                <i class="cf-icon cf-icon-linkedin-square"></i>
+            </li>
+        </ul>
+  tags:
+    - cfgov-misc
+*/
+
+
+.horizontal-list {
+    padding-left: 0;
+
+    &_item {
+        display: inline-block;
+
+        & + & {
+            // Assuming a natural space of 4px between inline block items
+            // then the space between would be 8px (4px natural + 4px added).
+            margin-left: unit(4px / @base-font-size-px, em);
+        }
+    }
+}
+
+
+/* topdoc
+  name: Horizontal share list
+  family: cfgov-misc
+  patterns:
+    - name: Default horizontal share-list
+      markup: |
+        <ul class="horizontal-list horizontal-list__share">
+            <li class="horizontal-list_item">
+                <a href="#">
+                    <i class="cf-icon cf-icon-email-social-square"></i>
+                </a>
+            </li>
+            <li class="horizontal-list_item">
+                <a href="#">
+                    <i class="cf-icon cf-icon-facebook-square"></i>
+                </a>
+            </li>
+            <li class="horizontal-list_item">
+                <a href="#">
+                    <i class="cf-icon cf-icon-twitter-square"></i>
+                </a>
+            </li>
+            <li class="horizontal-list_item">
+                <a href="#">
+                    <i class="cf-icon cf-icon-linkedin-square"></i>
+                </a>
+            </li>
+        </ul>
+  tags:
+    - cfgov-misc
+*/
+
+
+.horizontal-list__share {
+
+    .horizontal-list_item {
+        line-height: 1;
+
+        a {
+            .u-unstyled-link();
+            color: @darkgray;
+            font-size: unit(26px / @base-font-size-px, em);
+        }
+    }
+}
+
+
+/* topdoc
   name: Line container
   family: cfgov-misc
   patterns:
