Change how page margins are figured out

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5169,14 +5169,33 @@ img {
 */
 .content_main,
 .content_sidebar {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
   padding: 2em 0;
 }
+.ie .content_main,
+.ie .content_sidebar {
+  margin-right: -0.26em;
+}
+.lt-ie8 .content_main,
+.lt-ie8 .content_sidebar {
+  display: inline;
+  *zoom: 1;
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+.header .demo-placeholder,
+.content_hero .demo-placeholder,
+.footer .demo-placeholder {
+  margin-left: 15px;
+}
 @media only all and (min-width: 50.0625em) {
-  .header .demo-placeholder,
-  .content_hero .demo-placeholder,
-  .footer .demo-placeholder {
-    margin-left: 15px;
-  }
   .content__1-3 .content_main {
     display: inline-block;
     -webkit-box-sizing: border-box;
@@ -5295,23 +5314,20 @@ img {
     left: 75%;
   }
 }
-.wrapper {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding: 0 15px;
-  margin: 0 auto;
-  position: relative;
-  clear: both;
-}
-.lt-ie8 .wrapper {
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
-}
-@media only all and (min-width: 600px) and (max-width: 800px) {
+@media only all and (min-width: 600px) {
   .wrapper {
-    padding: 0 30px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    max-width: 1200px;
+    padding: 0 15px;
+    margin: 0 auto;
+    position: relative;
+    clear: both;
+  }
+  .lt-ie8 .wrapper {
+    *zoom: 1;
+    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 .header {
