--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -68,13 +68,15 @@
 */
 
 .header-slug {
+    border-top: 1px solid @gray-20;
 
     &_inner {
         .h5();
         display: inline-block;
         padding-top: unit(4px / @font-size, em);
+        margin-top: -3px;
         margin-bottom: unit(17px / @font-size, em);
-        border-top: 4px solid @green;
+        border-top: 5px solid @green;
     }
 }
 
