--- a/static/css/demo.less
+++ b/static/css/demo.less
@@ -58,3 +58,23 @@
     border: 2px dashed @gray-50;
     background: @gray-5;
 }
+
+.demo-logo {
+    margin: 26px 0;
+}
+
+.demo-spaced {
+    margin-bottom: unit(26px / @base-font-size-px, em);
+}
+
+.demo-cols {
+    .nested-col-group();
+}
+
+.demo-col-12 {
+    .column(12);
+}
+
+.demo-col-6 {
+    .column(6);
+}
