Renames content-blocks to blog-docs.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4134,11 +4134,11 @@ img {
 */
 /* ==========================================================================
    cfgov-refresh
-   cfgov-content-blocks
+   cfgov-blog-docs
    ========================================================================== */
 /* topdoc
   name: Slugs
-  family: cfgov-content-blocks
+  family: cfgov-blog-docs
   patterns:
     - name: Blog slugs
       markup: |
@@ -4161,11 +4161,11 @@ img {
       notes:
         - "Official icons are still being developed, hence the ?."
   tags:
-    - cfgov-content-blocks
+    - cfgov-blog-docs
 */
 /* topdoc
   name: Post previews
-  family: cfgov-content-blocks
+  family: cfgov-blog-docs
   patterns:
     - name: Post preview (no image)
       codenotes:
@@ -4239,7 +4239,7 @@ img {
             </div>
         </article>
   tags:
-    - cfgov-content-blocks
+    - cfgov-blog-docs
 */
 .post-preview + .post-preview {
   margin-top: 50px;
