--- a/static/css/main.less
+++ b/static/css/main.less
@@ -38,7 +38,7 @@ img {
 @import (less) "misc.less";
 @import (less) "post.less";
 @import (less) "summary.less";
-@import (less) "content-blocks.less";
+@import (less) "blog-docs.less";
 
 
 .content_main,
