--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -1,12 +1,12 @@
 /* ==========================================================================
    cfgov-refresh
-   cfgov-content-blocks
+   cfgov-blog-docs
    ========================================================================== */
 
 
 /* topdoc
   name: Slugs
-  family: cfgov-content-blocks
+  family: cfgov-blog-docs
   patterns:
     - name: Blog slugs
       markup: |
@@ -29,13 +29,13 @@
       notes:
         - "Official icons are still being developed, hence the ?."
   tags:
-    - cfgov-content-blocks
+    - cfgov-blog-docs
 */
 
 
 /* topdoc
   name: Post previews
-  family: cfgov-content-blocks
+  family: cfgov-blog-docs
   patterns:
     - name: Post preview (no image)
       codenotes:
@@ -109,7 +109,7 @@
             </div>
         </article>
   tags:
-    - cfgov-content-blocks
+    - cfgov-blog-docs
 */
 
 .post-preview + .post-preview {
