--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -144,11 +144,11 @@
     - name: Line container with a 'pullup' (example 1)
       markup: |
         <div class="line-container">
-            <div class="line-container_pullup header-slug">
-                <h2 class="header-slug_inner">
+            <h2 class="line-container_pullup header-slug">
+                <span class="header-slug_inner">
                     Blog summary
-                </h2>
-            </div>
+                </span>
+            </h2>
             <div class="line-container_body">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
