--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -52,11 +52,11 @@
   patterns:
     - name: Default header slug
       markup: |
-        <div class="header-slug">
-            <h2 class="header-slug_inner">
+        <h2 class="header-slug">
+            <span class="header-slug_inner">
                 Blog summary
-            </h2>
-        </div>
+            </span>
+        </h2>
       codenotes:
         - |
           Structural cheat sheet:
@@ -68,14 +68,14 @@
 */
 
 .header-slug {
+    .h5();
+    margin-bottom: unit(17px / @font-size, em);
     border-top: 1px solid @gray-20;
 
     &_inner {
-        .h5();
         display: inline-block;
         padding-top: unit(4px / @font-size, em);
         margin-top: -3px;
-        margin-bottom: unit(17px / @font-size, em);
         border-top: 5px solid @green;
     }
 }
