--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4365,14 +4365,14 @@ img {
                 <h1 class="post_header">
                     A consumer-centered supervision program
                 </h1>
-                <p class="post_meta">
+                <div class="post_meta">
                     <span class="post_byline">
                         By <a href="#">Firstname&nbsp;Lastname</a> &ndash;
                     </span>
                     <span class="post_date date">
                         Mon 32, 3001
                     </span>
-                </p>
+                </div>
                 <ul class="horizontal-list horizontal-list__share">
                     <li class="horizontal-list_item">
                         <a href="#">
