--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4052,7 +4052,12 @@ img {
 }
 .post_featured-img {
   display: block;
-  margin: 1.875em 0;
+  margin: 1em 0;
+}
+@media only all and (min-width: 50.0625em) {
+  .post_featured-img {
+    margin: 1.875em 0;
+  }
 }
 .post_summary {
   margin-top: 0;
