Updates media query bp's.

--- a/static/css/demo.less
+++ b/static/css/demo.less
@@ -9,7 +9,7 @@
     background: @darkgray;
     color: @white;
     .webfont-regular();
-    @media @respond-to-small-screens-max {
+    @media @respond-to-s-max {
         font-size: 0.875em;
     }
 }
@@ -30,7 +30,7 @@
         color: @gray-50;
     }
 
-    @media @respond-to-medium-screens-min {
+    @media @respond-to-m-min {
         padding: 0;
         float: left;
     }
@@ -39,7 +39,7 @@
 .demo-banner b {
     .webfont-medium();
 
-    @media @respond-to-small-screens-max {
+    @media @respond-to-s-max {
         display: block;
     }
 }
