--- a/static/css/post.less
+++ b/static/css/post.less
@@ -130,7 +130,7 @@
 
 .post_header {
     .h2();
-    @media @respond-to-medium-screens-min {
+    @media @respond-to-m-min {
         .h1();
     }
 }
@@ -146,7 +146,7 @@
 .post_featured-img {
     display: block;
     margin: unit(16px / @base-font-size-px, em) 0;
-    @media @respond-to-medium-screens-min {
+    @media @respond-to-xs-max {
         margin: unit(30px / @base-font-size-px, em) 0;
     }
 }
