--- a/static/css/summary.less
+++ b/static/css/summary.less
@@ -32,7 +32,7 @@
 
     &_header {
         .h3();
-        @media @respond-to-medium-screens-min {
+        @media @respond-to-m-min {
             .h2();
         }
     }
