--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -3819,7 +3819,7 @@ img {
       codenotes:
         - "@respond-to-small-screens-min"
         - "@respond-to-small-screens-max"
-        - "@respond-to-medium-screens-min"
+        - "@media @respond-to-m-min"
         - "@respond-to-medium-screens-max"
         - "@respond-to-large-screens-min"
         - "@respond-to-large-screens-max"
@@ -3829,7 +3829,7 @@ img {
     - name: "Usage"
       codenotes:
         - |
-            @media @respond-to-medium-screens-min {
+            @media @respond-to-m-min {
                 ...
             }
 
@@ -3883,8 +3883,30 @@ img {
     - cfgov-media-object
 */
 
+.media-object {
+  position: relative;
+  min-height: 9.9375em;
+  padding-left: 11.5625em;
+}
+
+.media-object_image-container {
+  position: absolute;
+  top: 0.25em;
+  left: 0;
+  width: 9.6875em;
+  overflow: hidden;
+}
+
 .media-object_image {
   margin-bottom: 0.5em;
+}
+
+.media-object_image {
+  display: block;
+  width: 290px;
+  max-width: 290px;
+  margin-bottom: 0;
+  margin-left: -50%;
 }
 
 /* topdoc
@@ -4894,6 +4916,22 @@ img {
 
 .content__bleedbar.content__3-1 .content_wrapper:after {
   left: 75%;
+}
+
+.wrapper {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+  position: relative;
+  clear: both;
+}
+
+.lt-ie8 .wrapper {
+  *zoom: 1;
+  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .header {
