--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -63,8 +63,7 @@
     padding-left: 0;
 
     &_item {
-        display: inline-block;
-
+        .u-inline-block();
         & + & {
             // Assuming a natural space of 4px between inline block items
             // then the space between would be 8px (4px natural + 4px added).
