--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -3785,6 +3785,10 @@ img {
         - .u-unstyled-link();
     - codenotes:
         - .u-flexible-image();
+    - codenotes:
+        - .u-inline-block();
+      notes:
+        - "Adds a .lt-ie8 class to hack inline-block for IE 7 and below."
   tags:
     - cfgov-utilities
 */
@@ -4199,6 +4203,10 @@ img {
 
 .horizontal-list_item {
   display: inline-block;
+}
+
+.lt-ie8 .horizontal-list_item {
+  display: inline;
 }
 
 .horizontal-list_item + .horizontal-list_item {
