--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -50,6 +50,10 @@
         - .u-unstyled-link();
     - codenotes:
         - .u-flexible-image();
+    - codenotes:
+        - .u-inline-block();
+      notes:
+        - "Adds a .lt-ie8 class to hack inline-block for IE 7 and below."
   tags:
     - cfgov-utilities
 */
@@ -88,6 +92,14 @@
         border-bottom-style: solid;
         border-bottom-color: @black;
         color: @black;
+    }
+}
+
+.u-inline-block() {
+    display: inline-block;
+    .lt-ie8 & {
+        // Hack inline-block into submission
+        display: inline;
     }
 }
 
